--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -348,6 +348,7 @@
   "sign-out": "Afmelden",
   "signed-decision-add": "Beslissingsfiche uploaden",
   "single-newsletter": "Losstaand kort bestek",
+  "sort-by": "Sorteren op",
   "size-extension": "KB",
   "start-date": "Startdatum",
   "status": "Status",
@@ -677,6 +678,8 @@
   "show-more": "Toon meer",
   "show-less": "Toon minder",
   "meeting-number": "ID van de vergadering",
+  "meeting-date": "Datum vergadering",
+  "relevance-score": "Relevantie",
   "activity-phase-proposed-for-agenda": "Ingediend voor agendering op",
   "activity-phase-approved-on-agenda": "Geagendeerd op de agenda van",
   "activity-phase-postponed-on-agenda": "Uitgesteld op de agenda van",
