KAS-3545 add translation instead of hardcoded string

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -144,6 +144,7 @@
   "documents-attached-to": "Bijbehorende documenten",
   "documents-sub case": "Documenten van de procedurestap",
   "download": "Download",
+  "download-2": "Downloaden",
   "download-documents": "Download alle documenten",
   "download-all-documents": "Download alle documenten",
   "drop-text": "Laat los om het bestand op te laden.",
