--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1063,5 +1063,8 @@
   "replace": "Vervangen",
   "source-file": "Bronbestand",
   "newsletters-tabs-search": "Bericht zoeken",
-  "newsletters-tabs-overview": "Alle berichten"
+  "newsletters-tabs-overview": "Alle berichten",
+  "source-file-lowercase": "bronbestand",
+  "word-document": "Word document",
+  "as": "als"
 }
