--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1072,5 +1072,6 @@
   "newsletters-tabs-overview": "Alle berichten",
   "source-file-lowercase": "bronbestand",
   "word-document": "Word document",
-  "as": "als"
+  "as": "als",
+  "limited-access": "Beperkte toegang"
 }
