KAS-3594 Replace Auk::Button & ButtonLink instances + general styling improvements (part 2)

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1072,5 +1072,10 @@
   "newsletters-tabs-overview": "Alle berichten",
   "source-file-lowercase": "bronbestand",
   "word-document": "Word document",
-  "as": "als"
+  "as": "als",
+  "redo": "Opnieuw doen",
+  "minimize": "Minimaliseren",
+  "maximize": "Maximaliseren",
+  "show": "Weergeven",
+  "hide": "Verbergen"
 }
