KAS-3594 Replace Auk::Button & ButtonLink instances + general styling improvements (part 3)

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1079,5 +1079,7 @@
   "minimize": "Minimaliseren",
   "maximize": "Maximaliseren",
   "show": "Weergeven",
-  "hide": "Verbergen"
+  "hide": "Verbergen",
+  "open-agendaitem": "Agendapunt openen",
+  "open-publication": "Publicatie openen"
 }
