Refactor users index page to new data model

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -323,6 +323,7 @@
   "search": "Zoeken",
   "search-placeholder": "Vul uw zoekterm in...",
   "case-search-placeholder": "Dossier zoeken...",
+  "user-search": "Gebruiker zoeken",
   "select": "Selecteer",
   "select-agenda": "Selecteer een agenda",
   "select-meeting": "Selecteer de vergadering",
