--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1081,5 +1081,6 @@
   "show": "Weergeven",
   "hide": "Verbergen",
   "open-agendaitem": "Agendapunt openen",
-  "open-publication": "Publicatie openen"
+  "open-publication": "Publicatie openen",
+  "open": "Openen"
 }
