--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -314,7 +314,7 @@
   "remove-roles": "Verwijder alle rechten",
   "move-subcase-to-other-case": "Verplaats procedurestap naar ander dossier",
   "requested-for-agenda": "Ingediend voor de agenda van",
-  "requested-for-session": "Aangevraagd voor Ministerraad:",
+  "requested-for-session": "Aangevraagd voor {kind}:",
   "resign": "Mandaat beëindigen",
   "results": "resultaten",
   "row": "Rij",
