KAS-3643 Replace Auk::DropdownMenu instances + general styling improvements

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1074,5 +1074,6 @@
   "word-document": "Word document",
   "as": "als",
   "limited-access": "Beperkte toegang",
-  "upload": "Opladen"
+  "upload": "Opladen",
+  "more": "Meer"
 }
