feat: add read-only overview of user organizations

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -130,6 +130,8 @@
   "number-of-words": "Aantal woorden",
   "number-of-pages-to-translate": "Aantal te vertalen bladzijden",
   "number-of-words-to-translate": "Aantal te vertalen woorden",
+  "number-of-users": "Aantal gebruikers",
+  "users": "gebruikers",
   "document-add": "Document toevoegen",
   "document-link-old": "Reeds bezorgde documenten koppelen",
   "document-delete": "Document verwijderen",
@@ -214,6 +216,7 @@
   "manage-subcase-types": "Procedurestap types beheer",
   "manage-user-roles": "Gebruikersbeheer",
   "manage-users": "Gebruikersbeheer",
+  "manage-organizations": "Organisatiebeheer",
   "mandatee": "Mandataris",
   "mandatee-approval": "Goedkeuring co-agendering",
   "meeting-new": "nieuwe vergadering",
