--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1081,6 +1081,7 @@
   "limited-access": "Beperkte toegang",
   "upload": "Opladen",
   "more": "Meer",
+  "blocked": "Geblokkeerd",
   "blocked-user": "Gebruiker geblokkeerd",
   "block-user": "Gebruiker blokkeren",
   "block-user-explanation": "Door een gebruiker te blokkeren kan deze niet meer inloggen. Alle toegangen worden ontzegd.",
@@ -1096,5 +1097,12 @@
   "unblock-membership-explanation": "Door de werkrelatie van een gebruiker te deblokkeren geef je deze opnieuw toegang.",
   "unblock-membership-which-one": "Welke werkrelatie wil je deblokkeren?",
   "unblock-membership-are-you-sure": "Ben je zeker dat je deze werkrelatie van <strong>{user}</strong> wil deblokkeren?",
-  "unblock-membership": "Werkrelatie deblokkeren"
+  "unblock-membership": "Werkrelatie deblokkeren",
+  "blocked-organization": "Organisatie geblokkeerd",
+  "block-organization": "Organisatie blokkeren",
+  "block-organization-explanation": "Gebruikers die een werkrelatie hebben met deze organisatie zullen niet meer in Kaleidos kunnen.",
+  "block-organization-are-you-sure": "Ben je zeker dat je deze organisatie wil blokkeren uit Kaleidos?",
+  "unblock-organization": "Organisatie deblokkeren",
+  "unblock-organization-explanation": "Gebruikers die een werkrelatie hebben met deze organisatie krijgen opnieuw toegang tot Kaleidos.",
+  "unblock-organization-are-you-sure": "Ben je zeker dat je deze organisatie wil deblokkeren?"
 }
