chore: use Gebruikers gezien instead of Aantal gebruikers as column head

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -130,7 +130,6 @@
   "number-of-words": "Aantal woorden",
   "number-of-pages-to-translate": "Aantal te vertalen bladzijden",
   "number-of-words-to-translate": "Aantal te vertalen woorden",
-  "number-of-users": "Aantal gebruikers",
   "users": "gebruikers",
   "document-add": "Document toevoegen",
   "document-link-old": "Reeds bezorgde documenten koppelen",
@@ -1081,6 +1080,8 @@
   "limited-access": "Beperkte toegang",
   "upload": "Opladen",
   "more": "Meer",
+  "users-seen": "Gebruikers gezien",
+  "users-seen-amount": "{amount, plural, =1 {1 gebruiker} other { # gebruikers}}",
   "blocked": "Geblokkeerd",
   "blocked-user": "Gebruiker geblokkeerd",
   "block-user": "Gebruiker blokkeren",
