feat: show last known login time in user overview

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1105,5 +1105,6 @@
   "block-organization-are-you-sure": "Ben je zeker dat je deze organisatie wil blokkeren uit Kaleidos?",
   "unblock-organization": "Organisatie deblokkeren",
   "unblock-organization-explanation": "Gebruikers die een werkrelatie hebben met deze organisatie krijgen opnieuw toegang tot Kaleidos.",
-  "unblock-organization-are-you-sure": "Ben je zeker dat je deze organisatie wil deblokkeren?"
+  "unblock-organization-are-you-sure": "Ben je zeker dat je deze organisatie wil deblokkeren?",
+  "last-seen": "Laatst gezien"
 }
