KAS-3631 add verify modal for uploading on approved agendas

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1077,5 +1077,7 @@
   "as": "als",
   "limited-access": "Beperkte toegang",
   "upload": "Opladen",
-  "more": "Meer"
+  "more": "Meer",
+  "documents-on-approved-agenda-title": "Documenten wijzigen op een goedgekeurde agenda",
+  "documents-on-approved-agenda-warning": "Er is een recentere versie van deze agenda. Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?"
 }
