feat: filter on user organization

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1106,5 +1106,9 @@
   "unblock-organization": "Organisatie deblokkeren",
   "unblock-organization-explanation": "Gebruikers die een werkrelatie hebben met deze organisatie krijgen opnieuw toegang tot Kaleidos.",
   "unblock-organization-are-you-sure": "Ben je zeker dat je deze organisatie wil deblokkeren?",
-  "last-seen": "Laatst gezien"
+  "last-seen": "Laatst gezien",
+  "filter-on-organization": "Filteren op organisatie",
+  "ovo-or-organization": "OVO of organisatie",
+  "list-of-ovo-codes": "Lijst met OVO codes",
+  "search-on-ovo-or-organization": "Zoek op organisatienaam of OVO-code"
 }
