feat: filter on blocked status of user or membership

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1082,6 +1082,7 @@
   "more": "Meer",
   "users-seen": "Gebruikers gezien",
   "users-seen-amount": "{amount, plural, =1 {1 gebruiker} other { # gebruikers}}",
+  "membership": "Werkrelatie",
   "blocked": "Geblokkeerd",
   "blocked-user": "Gebruiker geblokkeerd",
   "block-user": "Gebruiker blokkeren",
@@ -1109,6 +1110,7 @@
   "last-seen": "Laatst gezien",
   "filter-on-rights": "Filteren op rechtengroep",
   "filter-on-last-seen": "Filteren op laatst gezien",
+  "blocked-on": "Geblokkeerd op",
   "filter-on-organization": "Filteren op organisatie",
   "ovo-or-organization": "OVO of organisatie",
   "list-of-ovo-codes": "Lijst met OVO codes",
