--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1083,5 +1083,6 @@
   "upload": "Opladen",
   "more": "Meer",
   "documents-on-approved-agenda-title": "Documenten wijzigen op een goedgekeurde agenda",
-  "documents-on-approved-agenda-message": "Er is een recentere versie van deze agenda. Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?"
+  "documents-on-approved-agenda-with-next-version": "Er is een recentere versie van deze agenda.",
+  "documents-on-approved-agenda-message": "Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?"
 }
