--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1115,5 +1115,6 @@
   "filter-on-organization": "Filteren op organisatie",
   "ovo-or-organization": "OVO of organisatie",
   "list-of-ovo-codes": "Lijst met OVO codes",
-  "search-on-ovo-or-organization": "Zoek op organisatienaam of OVO-code"
+  "search-on-ovo-or-organization": "Zoek op organisatienaam of OVO-code",
+  "show-only-blocked": "Toon enkel geblokkeerde"
 }
