--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1131,5 +1131,6 @@
   "show-only-blocked": "Toon enkel geblokkeerde",
   "documents-on-approved-agenda-title": "Documenten wijzigen op een goedgekeurde agenda",
   "documents-on-approved-agenda-with-next-version": "Er is een recentere versie van deze agenda.",
-  "documents-on-approved-agenda-message": "Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?"
+  "documents-on-approved-agenda-message": "Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?",
+  "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan."
 }
