KAS-2008 add pop-up during background patches on postpone or retract action

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -679,7 +679,7 @@
   "saving-agendaitem-title-message": "Aanpassen van agendapunten",
   "saving-change-message": "Uw aanpassing wordt opgeslagen.",
   "saving-decision-result-title": "Aanpassen van resultaat beslissing",
-  "saving-decision-result-message": "Uw aanpassing wordt opgeslagen. Het resultaat van de beslissing wordt aangepast",
+  "saving-decision-result-message": "Het resultaat van de beslissing wordt aangepast.",
   "agenda-activity": "Agendering",
   "show-more": "Toon meer",
   "show-less": "Toon minder",
