--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -458,7 +458,7 @@
   "add-notification": "Notificatie toevoegen",
   "notification-loading-text": "De notificatie wordt geladen.",
   "new-agendaitem": "Nieuw agendapunt",
-  "from": "Vanaf",
+  "from": "Van",
   "until-inclusive": "Tot en met",
   "search-in-decisions-only": "Zoek enkel in beslissingen",
   "search-in-announcements-only": "Zoek enkel in mededelingen",
