update search design

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -464,7 +464,7 @@
   "add-notification": "Notificatie toevoegen",
   "notification-loading-text": "De notificatie wordt geladen.",
   "new-agendaitem": "Nieuw agendapunt",
-  "from": "Vanaf",
+  "from": "Van",
   "until": "tot",
   "until-inclusive": "Tot en met",
   "present-time": "heden",
