KAS-3726 Fix build error due to bad merge

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1123,5 +1123,5 @@
   "documents-on-approved-agenda-with-next-version": "Er is een recentere versie van deze agenda.",
   "documents-on-approved-agenda-message": "Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?",
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
-  "copy": "Kopiëren",
+  "copy": "Kopiëren"
 }
