KAS-3726 Small tweak in translation string for copy alert

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1125,5 +1125,5 @@
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
   "to-sign": "Te handtekenen",
   "copy": "Kopiëren",
-  "text-copied": "Titel en bericht gekopieerd naar klembord."
+  "text-copied": "Tekst gekopieerd naar klembord."
 }
