--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1125,5 +1125,6 @@
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
   "to-sign": "Te handtekenen",
   "copy": "Kopiëren",
-  "text-copied": "Tekst gekopieerd naar klembord."
+  "text-copied": "Tekst gekopieerd naar klembord.",
+  "view-case": "Dossier bekijken"
 }
