--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -580,6 +580,7 @@
   "error-reopen-meeting": "Er ging iets mis tijdens het heropenen van de agenda. Contacteer de administrator of probeer het opnieuw.\nDetail: {message}",
   "error-reopen-previous-agenda": "Er ging iets mis tijdens het heropenen van de vorige versie van agenda. Contacteer de administrator of probeer het opnieuw.\nDetail: {message}",
   "error-create-design-agenda": "Er ging iets mis tijdens het aanmaken van de ontwerpagenda. Contacteer de administrator of probeer het opnieuw.\nDetail: {message}",
+  "error-impersonation": "Er ging iets mis met de aanvraag om van gebruiker te switchen.\nDetail: {message}",
   "no-themes-selected": "Geen thema's geselecteerd",
   "no-themes-selected-message": "Er zijn nog geen thema's geselecteerd. Bent u zeker dat u het kort bestek wilt opslaan?",
   "search-legend-title": "Hulp bij zoeken",
@@ -1123,5 +1124,7 @@
   "documents-on-approved-agenda-with-next-version": "Er is een recentere versie van deze agenda.",
   "documents-on-approved-agenda-message": "Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?",
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
-  "to-sign": "Te handtekenen"
+  "to-sign": "Te handtekenen",
+  "impersonate-user": "Gebruiker nabootsen",
+  "you-see-the-app-as": "Je ziet de app als: {name}"
 }
