KAS-3732 implement new component to select older agendas

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -301,7 +301,6 @@
   "print-newsletter": "Kort bestek bekijken",
   "priority": "Prioriteit",
   "process": "Verloop",
-  "propose-for": "Aanvragen voor de vergadering van",
   "propose-for-agenda": "Indienen voor agendering",
   "public": "Publiek",
   "publicity": "Openbaarheid",
@@ -1125,5 +1124,6 @@
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
   "to-sign": "Te handtekenen",
   "copy": "Kopiëren",
-  "text-copied": "Tekst gekopieerd naar klembord."
+  "text-copied": "Tekst gekopieerd naar klembord.",
+  "no-recent-meetings": "Geen recente open agenda’s"
 }
