--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -580,7 +580,6 @@
   "error-reopen-meeting": "Er ging iets mis tijdens het heropenen van de agenda. Contacteer de administrator of probeer het opnieuw.\nDetail: {message}",
   "error-reopen-previous-agenda": "Er ging iets mis tijdens het heropenen van de vorige versie van agenda. Contacteer de administrator of probeer het opnieuw.\nDetail: {message}",
   "error-create-design-agenda": "Er ging iets mis tijdens het aanmaken van de ontwerpagenda. Contacteer de administrator of probeer het opnieuw.\nDetail: {message}",
-  "error-impersonation": "Er ging iets mis met de aanvraag om van gebruiker te switchen.\nDetail: {message}",
   "no-themes-selected": "Geen thema's geselecteerd",
   "no-themes-selected-message": "Er zijn nog geen thema's geselecteerd. Bent u zeker dat u het kort bestek wilt opslaan?",
   "search-legend-title": "Hulp bij zoeken",
@@ -1127,6 +1126,7 @@
   "to-sign": "Te handtekenen",
   "copy": "Kopiëren",
   "text-copied": "Tekst gekopieerd naar klembord.",
-  "impersonate-user": "Gebruiker nabootsen",
+  "change-role": "Profiel switchen",
+  "error-change-roles": "Er ging iets mis met de aanvraag om van profiel te switchen.\nDetail: {message}",
   "you-see-the-app-as": "Je ziet de app als: {name}"
 }
