--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -646,7 +646,7 @@
   "style-guide-buttons-link": "Buttons (link)",
   "style-guide-empty-state": "Empty state",
   "style-guide-file-upload": "File upload",
-  "style-guide-checkboxes-radio-buttons": "Checkboxes/radio buttons",
+  "style-guide-radio-buttons": "Radio buttons",
   "style-guide-key-value": "Key Value",
   "style-guide-list": "List",
   "style-guide-loader": "Loader",
