--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -259,7 +259,7 @@
   "no-ise-codes-yet": "Er zijn nog geen geselecteerde inhoudelijke structuurelementen.",
   "no-meetings": "Er zijn nog geen agenda’s aangemaakt.",
   "no-ministers": "Geen ministers",
-  "no-newsletter-info": "Nog geen kort bestek voor dit agendapunt.",
+  "no-news-item": "Nog geen kort bestek voor dit agendapunt.",
   "no-number-yet": "Nog geen nummer",
   "user-rights": "Rechten",
   "no-rights": "Geen rechten",
@@ -424,7 +424,7 @@
   "gender": "geslacht",
   "government-function": "beleidsfunctie",
   "identification": "identificatie",
-  "newsletter-info": "kort bestek",
+  "news-item": "kort bestek",
   "theme": "thema",
   "time-period": "tijdsspanne",
   "meeting": "vergadering",
@@ -442,7 +442,7 @@
   "agendaitems-creating-text": "De agendapunten worden aangemaakt.",
   "agendaitems-loading-text": "De agendapunten worden geladen.",
   "agenda-approving-text": "De agenda wordt goedgekeurd.",
-  "newsletter-info-loading-text": "Het kort bestek wordt geladen.",
+  "news-item-loading-text": "Het kort bestek wordt geladen.",
   "notification": "Notificatie",
   "no-notification-yet": "Nog geen notificatie beschikbaar",
   "no-results-found": "Geen resultaten gevonden",
