KAS-3771 add missing translation

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1137,5 +1137,6 @@
   "sum-of-attachments-exceeds-maximum-threshold": "De som van alle bestanden is groter dan 30 MB. Deze mail kan niet verstuurd worden.",
   "error-create-newsitem": "Er is al een kort bestek aangemaakt door {user}.",
   "error-multiple-newsitem": "Dit agendapunt heeft meerdere kort bestek berichten. Contacteer de administrator om dit recht te zetten.",
-  "organization-id": "Organisatie ID"
+  "organization-id": "Organisatie ID",
+  "open": "Open"
 } 
