rename "gearchiveerd" to "verwijderd" in frontend

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -459,7 +459,7 @@
   "search-in-decisions-only": "Zoek enkel in beslissingen",
   "search-in-announcements-only": "Zoek enkel in mededelingen",
   "search-confidential-only": "Toon enkel dossiers met beperkte toegang",
-  "search-include-archived": "Zoek ook in archief",
+  "search-include-archived": "Toon ook verwijderde dossiers",
   "no-nota": "Geen nota beschikbaar",
   "nota-loading-text": "De nota wordt geladen..",
   "general-settings": "Algemene instellingen",
