added control to view only archived cases

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -460,6 +460,7 @@
   "search-in-announcements-only": "Zoek enkel in mededelingen",
   "search-confidential-only": "Toon enkel dossiers met beperkte toegang",
   "search-include-archived": "Toon ook verwijderde dossiers",
+  "search-archived-only": "Toon enkel verwijderde dossiers",
   "no-nota": "Geen nota beschikbaar",
   "nota-loading-text": "De nota wordt geladen..",
   "general-settings": "Algemene instellingen",
