feat: add decisions search route

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1142,5 +1142,6 @@
   "current-ministers": "Huidige ministers",
   "past-ministers": "Vorige ministers",
   "show-past-ministers": "Toon vorige ministers",
-  "hide-past-ministers": "Verberg vorige ministers"
+  "hide-past-ministers": "Verberg vorige ministers",
+  "decisions": "Beslissingen"
 }
