added separate confidential-filter component

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -458,7 +458,7 @@
   "present-time": "heden",
   "search-in-decisions-only": "Zoek enkel in beslissingen",
   "search-in-announcements-only": "Zoek enkel in mededelingen",
-  "search-confidential-only": "Toon enkel dossiers met beperkte toegang",
+  "search-confidential-only": "Toon enkel {objectVerb} met beperkte toegang",
   "search-include-archived": "Toon ook verwijderde dossiers",
   "search-archived-only": "Toon enkel verwijderde dossiers",
   "no-nota": "Geen nota beschikbaar",
@@ -496,6 +496,7 @@
   "decision-in-newsletter": "De beslissing in kort bestek",
   "title-and-content": "Titel en inhoud",
   "confidential": "Vertrouwelijk",
+  "confidentialityLevel": "Toegangsniveau",
   "archive-case-message": "Bent u zeker dat u dit dossier wilt verwijderen? Deze actie zal niet meer ongedaan gemaakt kunnen worden.",
   "import-users": "Gebruikers importeren",
   "import-users-text": "Gebruikers worden geïmporteerd..",
