--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1142,5 +1142,7 @@
   "error-create-newsitem": "Er is al een kort bestek aangemaakt door {user}.",
   "error-multiple-newsitem": "Dit agendapunt heeft meerdere kort bestek berichten. Contacteer de administrator om dit recht te zetten.",
   "organization-id": "Organisatie ID",
-  "all-document-types": "Alle documenttypes"
+  "all-document-types": "Alle documentstypes",
+  "show-all-document-types": "Toon alle documentstypes",
+  "hide-document-types": "Verberg documentstypes"
 }
