update signing flow

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1125,5 +1125,61 @@
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
   "to-sign": "Te handtekenen",
   "copy": "Kopiëren",
-  "text-copied": "Tekst gekopieerd naar klembord."
+  "text-copied": "Tekst gekopieerd naar klembord.",
+  "signaturesSection": {
+    "filter-ministers": "Filter op ministers",
+    "signed-status": "Tekenstatus",
+    "sidebar-title": "Handteken document",
+    "signature-needed-by": "Te handtekenen door",
+    "prepare-signatures": "Handtekenen voorbereiden",
+    "yes-cancel-signatures": "Ja, handtekenen annuleren",
+    "cancel-signatures": "Handtekenen annuleren",
+    "confirm-cancel-signatures": "Door het annuleren van handtekenen zal dit document uit de handtekenmap verwijderd worden.",
+    "signature-success": "Het document is succesvol verzonden ter ondertekening.",
+    "signature-properties": "Handtekeneigenschappen",
+    "signature-required": "Handtekening vereist",
+    "signed-by": "Ondertekend door",
+    "decision-fiche": "Beslissingsfiche",
+    "no-documents": "Er zijn geen documenten om te ondertekenen."
+  },
+  "util": {
+    "view": "Bekijken",
+    "sign": "Handtekenen",
+    "edit": "Bewerken",
+    "edit-status": "Status aanpassen",
+    "download": "Download",
+    "delete": "Verwijderen",
+    "add-document": "Document toevoegen",
+    "documents": "Documenten",
+    "no-documents-added": "Er zijn nog geen documenten toegevoegd.",
+    "create-report": "Rapport maken",
+    "request-sent": "Aanvraag verzonden",
+    "last-requested-on": "Laatst aangevraagd op",
+    "info": "info",
+    "by": "door",
+    "on": "om",
+    "date": "Datum",
+    "year": "Jaar",
+    "reset-filter": "Filter wissen",
+    "date-approved": "Datum goedkeuring",
+    "preview": "Voorvertoning",
+    "add": "Toevoegen",
+    "apply": "Toepassen",
+    "edit-list": "Lijst bewerken",
+    "sure": "Bent u zeker?",
+    "no-go-back": "Nee, ga terug",
+    "close": "Sluiten",
+    "show-documents": "Toon documenten",
+    "hide-documents": "Verberg documenten",
+    "new-document": "Nieuw document",
+    "decision-result": "Resultaat beslissing",
+    "no-decision-set": "Nog geen beslissing ingesteld",
+    "website": "Op de website",
+    "internal-remark-title": "Interne opmerking",
+    "approval": "Goedkeuring",
+    "searchTerm": "Zoekterm",
+    "searchOnDate": "Zoeken op datumtype",
+    "searchDate": "Datum",
+    "searchPublication": "Publicatie zoeken"
+  }
 }
