added search-result-card-agendaitem component

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1146,5 +1146,6 @@
   "hide-past-ministers": "Verberg vorige ministers",
   "delete-empty-case": "Leeg dossier verwijderen?",
   "delete-empty-case-confirmation": "Dossier ''{case}'' heeft geen procedurestappen meer. Wilt u het dossier verwijderen?",
-  "open": "Open"
+  "open": "Open",
+  "out": "Uit"
 }
