--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1146,6 +1146,7 @@
   "hide-past-ministers": "Verberg vorige ministers",
   "delete-empty-case": "Leeg dossier verwijderen?",
   "delete-empty-case-confirmation": "Dossier ''{case}'' heeft geen procedurestappen meer. Wilt u het dossier verwijderen?",
+  "deleted-case": "Verwijderd dossier",
   "open": "Open",
   "out": "Uit"
 }
