fix signing flow

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -169,6 +169,7 @@
   "file-type": "Bestandstype",
   "files-of": "bestanden van de",
   "filter": "Filter",
+  "filter-content": "Filter inhoud",
   "finished": "Afgewerkt",
   "received": "Ontvangen",
   "received-at": "Ontvangen op",
