KAS-3789 revert toggle archive and made it toggle only archived instead of showing both

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -341,6 +341,7 @@
   "short-title-case": "Korte titel dossier",
   "long-title": "Lange titel",
   "show-archived": "Toon verwijderde dossiers",
+  "show-archived-only": "Toon enkel verwijderde dossiers",
   "show-as-remark": "Dit is een mededeling",
   "show-piece": "Viewer",
   "show-pieces": "Toon versies",
