--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1128,7 +1128,7 @@
   "copy": "Kopiëren",
   "text-copied": "Tekst gekopieerd naar klembord.",
   "signaturesSection": {
-    "filter-ministers": "Filter op ministers",
+    "filter-ministers": "Filter op ondertekenaar",
     "signed-status": "Tekenstatus",
     "sidebar-title": "Handteken document",
     "signature-needed-by": "Te handtekenen door",
