chore: use kebab-case for confidentiality-level translation string

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -492,7 +492,7 @@
   "decision-in-newsletter": "De beslissing in kort bestek",
   "title-and-content": "Titel en inhoud",
   "confidential": "Vertrouwelijk",
-  "confidentialityLevel": "Toegangsniveau",
+  "confidentiality-level": "Toegangsniveau",
   "archive-case-message": "Bent u zeker dat u dit dossier wilt verwijderen? Deze actie zal niet meer ongedaan gemaakt kunnen worden.",
   "import-users": "Gebruikers importeren",
   "import-users-text": "Gebruikers worden geïmporteerd..",
