re-added translation keys for toggle aangepaste punten

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -475,6 +475,8 @@
   "normal-meeting": "Niet-elektronisch",
   "flemish-government": "Vlaamse Regering",
   "added-agendaitem-text": "Nieuw agendapunt",
+  "show-changes": "Toon aangepaste punten",
+  "show-all": "Toon alle punten",
   "national-number": "VO-ID",
   "last-name": "Achternaam",
   "group": "Groep",
