changes to signature flow

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1132,9 +1132,9 @@
     "signed-status": "Tekenstatus",
     "sidebar-title": "Handteken document",
     "signature-needed-by": "Te handtekenen door",
-    "prepare-signatures": "Handtekenen voorbereiden",
+    "prepare-signatures": "Proces starten",
     "yes-cancel-signatures": "Ja, handtekenen annuleren",
-    "cancel-signatures": "Handtekenen annuleren",
+    "cancel-signatures": "Proces annuleren",
     "confirm-cancel-signatures": "Door het annuleren van handtekenen zal dit document uit de handtekenmap verwijderd worden.",
     "signature-success": "Het document is succesvol verzonden ter ondertekening.",
     "signature-properties": "Handtekeneigenschappen",
