--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1149,5 +1149,7 @@
   "deleted-case": "Verwijderd dossier",
   "open": "Open",
   "out": "Uit",
-  "found-inside": "Gevonden in"
+  "found-inside": "Gevonden in",
+  "and-one-other-subcase": "en nog 1 andere procedurestap",
+  "and-n-other-subcases": "en nog {n} andere procedurestappen"
 }
