--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1160,5 +1160,5 @@
   "and-one-other-subcase": "en nog 1 andere procedurestap",
   "and-n-other-subcases": "en nog {n} andere procedurestappen",
   "also-found-in": "Ook gevonden in",
-  "uploaded-in-thing": "Geupload in {thing}"
+  "uploaded-in-thing": "Geüpload in {thing}"
 }
