fix: update search header for documents and news items
We erroneously showed "Dossiers" and "Agendas" respectively.

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1161,5 +1161,6 @@
   "and-n-other-subcases": "en nog {n} andere procedurestappen",
   "also-found-in": "Ook gevonden in",
   "uploaded-in-thing": "Geüpload in {thing}",
-  "creation-date": "Aanmaakdatum"
+  "creation-date": "Aanmaakdatum",
+  "news-items": "Kort bestek berichten"
 }
