--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1161,5 +1161,6 @@
   "and-n-other-subcases": "en nog {n} andere procedurestappen",
   "also-found-in": "Ook gevonden in",
   "uploaded-in-thing": "Geüpload in {thing}",
-  "creation-date": "Aanmaakdatum"
+  "creation-date": "Aanmaakdatum",
+  "all-content": "Alle inhoud"
 }
