--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1162,5 +1162,6 @@
   "also-found-in": "Ook gevonden in",
   "uploaded-in-thing": "Geüpload in {thing}",
   "creation-date": "Aanmaakdatum",
-  "all-content": "Alle inhoud"
+  "all-content": "Alle inhoud",
+  "n-results-found-in": "{n} resultaten gevonden in"
 }
