fix: use correct grammar when only one result

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1164,5 +1164,6 @@
   "creation-date": "Aanmaakdatum",
   "all-content": "Alle inhoud",
   "n-results-found-in": "{n} resultaten gevonden in",
+  "one-result-found-in": "1 resultaat gevonden in",
   "news-items": "Kort bestek berichten"
 }
