KAS-3945 implement sorting and filterin on meetingDate, fallback to created if not on agenda

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1162,5 +1162,6 @@
   "also-found-in": "Ook gevonden in",
   "uploaded-in-thing": "Geüpload in {thing}",
   "creation-date": "Aanmaakdatum",
-  "news-items": "Kort bestek berichten"
+  "news-items": "Kort bestek berichten",
+  "document-not-on-agendaitem": "Niet geüpload op een agendapunt"
 }
