corrected filter label documenttypes

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1142,8 +1142,8 @@
   "error-multiple-newsitem": "Dit agendapunt heeft meerdere kort bestek berichten. Contacteer de administrator om dit recht te zetten.",
   "organization-id": "Organisatie ID",
   "all-document-types": "Alle documentstypes",
-  "show-all-document-types": "Toon alle documentstypes",
-  "hide-document-types": "Verberg documentstypes",
+  "show-all-document-types": "Toon alle documenttypes",
+  "hide-document-types": "Verberg documenttypes",
   "current-ministers": "Huidige ministers",
   "past-ministers": "Vorige ministers",
   "show-past-ministers": "Toon vorige ministers",
