--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1141,7 +1141,7 @@
   "error-create-newsitem": "Er is al een kort bestek aangemaakt door {user}.",
   "error-multiple-newsitem": "Dit agendapunt heeft meerdere kort bestek berichten. Contacteer de administrator om dit recht te zetten.",
   "organization-id": "Organisatie ID",
-  "all-document-types": "Alle documentstypes",
+  "all-document-types": "Alle documenttypes",
   "show-all-document-types": "Toon alle documenttypes",
   "hide-document-types": "Verberg documenttypes",
   "current-ministers": "Huidige ministers",
