fix: link agendaitems without short title from document result card
Mostly legacy data doesn't containt short titles for agendaitems.
Ideally we index both the agendaitem short- and long title in the pieces
index, but that's currently not the case. For the time being, when an
agendaitem lacks a shortTitle we will just show no title and make
"agendapunt" clickable.

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1157,6 +1157,7 @@
   "and-one-other-subcase": "en nog 1 andere procedurestap",
   "and-n-other-subcases": "en nog {n} andere procedurestappen",
   "also-found-in": "Ook gevonden in",
+  "uploaded-in": "Geüpload in",
   "uploaded-in-thing": "Geüpload in {thing}",
   "creation-date": "Aanmaakdatum",
   "all-content": "Alle inhoud",
