--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -581,7 +581,7 @@
   "error-create-design-agenda": "Er ging iets mis tijdens het aanmaken van de ontwerpagenda. Contacteer de administrator of probeer het opnieuw.\nDetail: {message}",
   "no-themes-selected": "Geen thema's geselecteerd",
   "no-themes-selected-message": "Er zijn nog geen thema's geselecteerd. Bent u zeker dat u het kort bestek wilt opslaan?",
-  "search-legend-title": "Zoektermen Combineren",
+  "search-legend-title": "Zoektermen combineren",
   "search-legend-header-sign": "Teken",
   "search-legend-header-explanation": "Betekenis",
   "search-legend-header-example": "Voorbeelden",
