KAS-3884 fix translations for download message

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1177,5 +1177,5 @@
   "document-not-on-agendaitem": "Niet geüpload in agendapunt",
   "download-agenda-documents-info": "Deze functie brengt standaard alle documenten van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de documenten ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
   "no-ministers-submitted-on-this-agenda": "Er zijn geen ministers die een document hebben ingediend op deze agenda.",
-  "download-agenda-decisions-info": "Vink de ministers aan wier beslissingsfiches je wilt downloaden. Beslissingsfiches zonder minister worden altijd toegevoegd aan het bestand."
+  "download-agenda-decisions-info": "Deze functie brengt standaard alle beslissingen van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de beslissingen ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan."
 }
