Link users to mandatees

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -84,6 +84,8 @@
   "close-subcase": "Procedurestap afsluiten",
   "move-subcase": "Procedurestap verplaatsen",
   "collapse": "Bekijk beleidsvelden",
+  "connect": "Koppelen",
+  "connect to mandatee": "Koppel aan Mandataris",
   "contact-person": "Contactpersoon",
   "content": "Inhoud",
   "create": "Aanmaken",
